Remove unused API and service files; implement Forgot Password and Reset Password pages

--- a/backend/.env
+++ b/backend/.env
@@ -7,3 +7,6 @@ DB_PASSWORD=aayush
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=shoestore
+EMAIL_FROM=abhay.dev.adev7@gmail.com
+EMAIL_PASS=alaq rqtd ehzt sthl
+APP_URL=http://localhost:5173
